--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Simple SITTEMP - Interactive Military Mapping Tool</title>
     <!-- Replace YOUR_API_KEY with your actual Google Maps API key -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDixCJvsoavnyz6Z7VAkBp_C6Ta2DVwi6w&libraries=drawing,geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=KEY&libraries=drawing,geometry"></script>
     <script src="markerTypes.js"></script>
     <!-- Include Proj4js for coordinate transformations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.7.5/proj4.js"></script>
